# DIGM

./: .gitignore  .gitmodules  AGENT_GUIDELINES.md  BRAND_COLORS.md  BUILD_STATUS.md  CNAME  ComparisonChart.md  DEPLOYMENT.md  DIGM-LIGHTPAPER.md  DIGM_FUEGO_ARCHITECTURE_GUIDE.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  LICENSE  NEXT_STEPS.md  P2P_Audio_Architecture.md  PR_DESCRIPTION.md  PR_GITHUB_PAGES.md  QUICK_PROJECT_SETUP.md  QUICK_START.md  README.md  XFG_Freemium_Integration.md  XFG_Wallet_Options.md  asset-manifest.json  create-pr-commands.md  fix-eslint-issues.md  fix-github-pages-deployment.md  index.html  manifest.json  package-lock.json  package.json  pr-commands.md  setup-github-pages.md  tsconfig.json  tsconfig.main.json  update-build-commands.md  update_deep_colors.sh
.codex/skills/: README.md
.github/: README.md
.github/workflows/: build-android.yml  build.yml  ci.yml  deploy.yml  flutter.yml  release-android.yml  release.yml  rust.yml  static.yml
assets/: README.md
assets/catalog/: albums.json
conductor/: DESIGN_DECISION_LOG.md  index.md
contracts/: COLD-L3-COMPREHENSIVE-MEMORY.md
contracts/digm-nft/: Cargo.toml
contracts/digm-nft/src/: lib.rs
contracts/dst-loans/: Cargo.toml
contracts/dst-loans/src/: lib.rs
contracts/dst-token/: Cargo.toml
contracts/dst-token/src/: lib.rs
device-proof-recorder-android/: .gitignore  Fastfile  README.md  build.gradle.kts  local.properties.example  settings.gradle.kts
device-proof-recorder-android/app/: build.gradle.kts  proguard-rules.pro
device-proof-recorder-android/fastlane/: Appfile
device-proof-recorder-ios/: .gitignore  CREATE_XCODE_PROJECT.md  ContentView.swift  DigmOriginsRecorder.swift  DigmOriginsView.swift  DigmRecorderApp.swift  Fastfile  Gemfile  Info.plist  LOGO_DESIGN_PROMPTS.md  README.md  README_COMMAND_LINE.md  README_FASTLANE.md  Recorder.swift  RecorderViewModel.swift  SecureEnclaveKey.swift  UI_DESIGN_SPEC.md  VoiceMemoRecorder.swift  VoiceMemoView.swift  XCODE_SETUP.md  build.sh  create_xcode_project.sh  project.yml
device-proof-recorder-ios/.fastlane/: README.md
device-proof-recorder-ios/fastlane/: Appfile
digm_ref/: BUILD_INSTRUCTIONS.md  Cargo.toml  README.md
digm_ref/include/: digm.h
digm_ref/src/: ffi.rs  format.rs  lib.rs  reader.rs  verify.rs  writer_stream.rs
digm_ref/tests/: roundtrip.rs
docs/: 0X0B_BLOCKCHAIN_SCANNING.md  0X0B_IMPLEMENTATION_SUMMARY.md  0X0B_LISTENER_RIGHTS_IMPLEMENTATION.md  AUDIO_FORMAT_STRATEGY.md  Blockchain_Blues.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CURATOR_REVENUE_SHARE_MODEL.md  ComparisonChart.md  DARKMX_ARCHITECTURE_ANALYSIS.md  DECENTRALIZED_STORAGE_COST_ANALYSIS.md  DEV_IMPLEMENTATION_PLAN.md  DIGM-P2P-AUDIO-ARCHITECTURE.md  DIGM_BRANDING_GUIDE.md  DIGM_COLD_CELESTIA_DETAIL.md  DIGM_COLLABORATIVE_FEATURES.md  DIGM_CUSTOM_ADDRESSING.md  DIGM_FORMAT_IMPLEMENTATION.md  DIGM_HYBRID_NODE_ARCHITECTURE.md  DIGM_PLATFORM_DEVICE_AUDIO.md  DIGM_PROOF_MIC_CHECK_ANALYSIS.md  DIGM_PROOF_MINIMAL_REQUIREMENTS.md  DIGM_PROOF_RECORDER_ARCHITECTURE.md  DIGM_PROOF_TECHNOLOGY_USES.md  DIGM_STABLE_ASSET_DESIGN.md  DIGM_TORRENT_NETWORK_DESIGN.md  DST_LOAN_SYSTEM_DESIGN.md  ELDERFIER_AUDIO_INDEX.md  ELDERFIER_AUDIO_SERVICE.md  GUN_IMPLEMENTATION_PLAN.md  INTEGRATION_ROADMAP.md  MULTI_REPO_STRATEGY.md  MVP_MOBILE_APP_SUMMARY.md  MVP_NEXT_PHASE_AUDIO_STORAGE.md  P2P_Audio_Architecture.md  P2P_STORAGE_RESEARCH.md  P2P_STORAGE_SETUP.md  PARAD_NETWORK_DAEMON.md  PARASHARE_TECHNICAL_SUMMARY.md  PARA_AUDIO_P2P_NETWORK.md  PARA_TOKEN_ECONOMICS.md  (+5 more)
flutter_app/: README.md  analysis_options.yaml  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
frontend/: .gitignore  DIGM_ARCHITECTURE.md  DIGM_COLD_CELESTIA_DETAIL.md  DIGM_LOGO_PROMPT.md  README.md  UPLOAD_FEATURES.md  package-lock.json  package.json  rabet_implementation.js  tailwind.config.js
frontend-arch/: ARCHITECTURE_NOTES.md  multi_wallet_implementation.js  package-lock.json  package.json  rabbit_wallet_implementation.js
frontend-arch/public/: index.html
frontend-arch/src/: App.tsx
frontend/public/: index.html
frontend/src/: App.tsx  index.css
fuego_index_fresh/: ai_context_fresh.json  fuego_fresh_index.json
libfuego_core/: Cargo.toml
libfuego_core/chunk-store/: Cargo.toml
libfuego_core/chunk-store/src/: lib.rs
libfuego_core/digm-app/: Cargo.toml
libfuego_core/digm-app/src/: lib.rs
libfuego_core/ffi-bridge/: Cargo.toml  ffi.udl
libfuego_core/ffi-bridge/dart/: pubspec.yaml
libfuego_core/ffi-bridge/dart/lib/: digm_core.dart
libfuego_core/ffi-bridge/src/: api_server.rs  lib.rs  main.rs
libfuego_core/fuego-audio/: Cargo.toml
libfuego_core/fuego-audio/src/: lib.rs
libfuego_core/fuego-crypto/: Cargo.toml
libfuego_core/fuego-crypto/src/: lib.rs
libfuego_core/fuego-node/: Cargo.toml
libfuego_core/fuego-node/src/: lib.rs
libfuego_core/fuego-vault/: Cargo.toml
libfuego_core/i2p-net/: Cargo.toml
libfuego_core/i2p-net/src/: lib.rs
libfuego_core/p2p-net/: Cargo.toml
libfuego_core/p2p-net/src/: lib.rs
public/js/: cn.js  miner.js  worker.js
renderer/: package-lock.json  package.json
renderer/src/: App.tsx
src/: soulseek-tracker.js
src/main/: fuego-bridge.ts  index.ts  mining-api.ts  para-bridge.ts  preload.ts
src/miner/: proxyMiner.ts
src/shared/: fuego-index.ts  storage.ts  types.ts  utils.ts
src/types/: stellar-sdk.d.ts
static/css/: main.261bc26a.css  main.261bc26a.css.map  main.2fb67f78.css  main.2fb67f78.css.map  main.740aaf4e.css  main.740aaf4e.css.map  main.7fe37583.css  main.7fe37583.css.map  main.905a3418.css  main.905a3418.css.map  main.ec1021d5.css  main.ec1021d5.css.map  main.f69b77f9.css  main.f69b77f9.css.map  main.ffc41f44.css  main.ffc41f44.css.map
static/js/: main.2bc34064.js  main.2bc34064.js.map  main.3c832dc8.js  main.3c832dc8.js.LICENSE.txt  main.471cc03b.js  main.471cc03b.js.map  main.48f70dc4.js  main.48f70dc4.js.LICENSE.txt  main.48f70dc4.js.map  main.5657a9b0.js  main.73320d33.js  main.73320d33.js.map  (+6 more)
(+157 files in other folders)
