[package]
name = "digm_ref"
version = "0.2.0"
edition = "2021"

[lib]
name = "digm_ref"
crate-type = ["rlib","cdylib"]  # cdylib enables C FFI

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
anyhow = "1.0"
base64 = "0.21"
p256 = { version = "0.11", features=["ecdsa","pkcs8"] }
ecdsa = "0.16"
clap = { version = "4.1", features=["derive"] }
uuid = { version = "1.4" }
chrono = { version = "0.4", features = ["alloc"] }
rand = "0.8"

[[bin]]
name = "digm-encode"
path = "src/bin/digm-encode.rs"

[[bin]]
name = "digm-info"
path = "src/bin/digm-info.rs"

