[package]
name = "digm-nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.4"
cosmwasm-std = "1.4"
cosmwasm-storage = "1.4"
cw-storage-plus = "1.2"
cw2 = "1.1"
cw721 = "0.20"
cw721-base = "0.20"
cw-controllers = "0.20"
cw-utils = "0.20"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0" 