[package]
name = "chunk-store"
version = "0.1.0"
edition = "2021"

[dependencies]
fuego-crypto = { path = "../fuego-crypto" }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
i2p-net = { path = "../i2p-net" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
