[package]
name = "digm-app"
version = "0.1.0"
edition = "2021"

[dependencies]
fuego-crypto = { path = "../fuego-crypto" }
fuego-vault = { path = "../fuego-vault" }
fuego-node = { path = "../fuego-node" }
i2p-net = { path = "../i2p-net" }
chunk-store = { path = "../chunk-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"

