[package]
name = "ffi-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
fuego-vault = { path = "../fuego-vault" }
fuego-node = { path = "../fuego-node" }
digm-app = { path = "../digm-app" }
i2p-net = { path = "../i2p-net" }
p2p-net = { path = "../p2p-net" }
chunk-store = { path = "../chunk-store" }
fuego-audio = { path = "../fuego-audio" }
fuego-crypto = { path = "../fuego-crypto" }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

